# logtapper

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  LICENSE  LOG_ANALYZER_SPEC.md  MCP_SECURITY_DESIGN.md  README.md  eslint.config.js  fd-heap-investigation.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
.taskorchestrator/: config.yaml
design_docs/: log-viewer-architecture.md
docs/processors/: README.md  correlator-processors.md  filter-reference.md  marketplace.md  output-and-charts.md  reporter-processors.md  rhai-scripting.md  schema-and-signals.md  state-tracker-processors.md
docs/references/: react-best-practices-reference.md
eslint-local-rules/: index.cjs  no-map-write-in-render.cjs  no-map-write-in-render.test.cjs  no-side-effects-in-updater.cjs  no-side-effects-in-updater.test.cjs  require-memo.cjs  require-memo.test.cjs
marketplace/: CLAUDE.md  marketplace.json
marketplace/packs/: device-health.pack.yaml  error-analysis.pack.yaml  network-connectivity.pack.yaml  samsung-security.pack.yaml  stability-monitor.pack.yaml  system-health.pack.yaml  telephony-suite.pack.yaml  wifi-diagnostics.pack.yaml
marketplace/processors/: app_lifecycle.yaml  battery_events.yaml  battery_health.yaml  battery_state.yaml  cellular_data_failure_reporter.yaml  cellular_registration_state.yaml  charging_state.yaml  connectivity_check_probes.yaml  connectivity_check_state.yaml  cpu_load.yaml  crash_storm_detector.yaml  dns_private_probe_tracker.yaml  dns_query_events.yaml  dns_server_stats.yaml  ebadf_error_tracker.yaml  exception_stack_tracker.yaml  exception_storm_detector.yaml  fd_ebadf_correlator.yaml  gc_pressure_monitor.yaml  gpu_memory.yaml  ims_volte_reporter.yaml  memory_pressure.yaml  network_connectivity.yaml  p2p_go_negotiation_events.yaml  p2p_group_formation_tracker.yaml  p2p_wps_provisioning_tracker.yaml  process_kill_storm.yaml  radio_airplane_mode_state.yaml  radio_data_call_reporter.yaml  samsung_auto_blocker.yaml  sim_identity_reporter.yaml  system_server_fd_monitor.yaml  system_server_heap.yaml  system_server_monitor.yaml  thermal_state.yaml  wifi_state.yaml  wlan_disconnect_events.yaml  wlan_disconnect_tracker.yaml
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.ts
plugins/logtapper/: README.md
processors/: connectivity-check-probes.yaml  connectivity-check-state.yaml  ebadf-error-tracker.yaml  exception-storm-detector.yaml  fd-ebadf-correlator.yaml  gc-pressure-monitor.yaml  process-kill-storm.yaml  system-server-fd-monitor.yaml  system-server-heap.yaml  wlan-disconnect-events.yaml  wlan-disconnect-tracker.yaml
src/: App.css  App.tsx  index.css  main.tsx
src-next/: App.tsx  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  mcp_bridge.rs
src-tauri/src/anonymizer/: config.rs  detectors.rs  mapping.rs  mod.rs
src-tauri/src/charts/: aggregation.rs  builder.rs  mod.rs
src-tauri/src/claude/: analysis.rs  client.rs  generator.rs  mod.rs
src-tauri/src/commands/: CLAUDE.md  adb.rs  analysis.rs  anonymizer.rs  artifact_mutations.rs  bookmark.rs  bridge_access.rs  charts.rs  claude.rs  correlator.rs  export.rs  file_associations.rs  files.rs  filter.rs  mcp.rs  mod.rs  pipeline.rs  pipeline_core.rs  processors.rs  session.rs  sources.rs  state_tracker.rs  watch.rs  workspace_cmd.rs  workspace_sync.rs
src-tauri/src/core/: CLAUDE.md  analysis.rs  bookmark.rs  bugreport_parser.rs  filter.rs  index.rs  kernel_parser.rs  line.rs  log_source.rs  logcat_parser.rs  mod.rs  parser.rs  pipeline.rs  session.rs  session_identity.rs  timeline.rs  watch.rs
src-tauri/src/processors/: CLAUDE.md  filter.rs  interpreter.rs  marketplace.rs  mod.rs  pack.rs  registry.rs  schema.rs  signals.rs  vars.rs
src-tauri/src/processors/annotator/: schema.rs
src-tauri/src/processors/builtin/: app_lifecycle.yaml  battery_state.yaml  marketplace_snapshot.json  network_connectivity.yaml  pii_anonymizer.yaml  samsung_auto_blocker.yaml  wifi_state.yaml
src-tauri/src/processors/correlator/: engine.rs  mod.rs  schema.rs
src-tauri/src/processors/reporter/: engine.rs  mod.rs  schema.rs  vars.rs
src-tauri/src/processors/state_tracker/: engine.rs  schema.rs  types.rs
src-tauri/src/processors/transformer/: builtin.rs  engine.rs  mod.rs  schema.rs  types.rs
src-tauri/src/scripting/: CLAUDE.md  bridge.rs  engine.rs  mod.rs  sandbox.rs
src-tauri/src/workspace/: app_state.rs  autosave.rs  lts.rs  ltw_v4.rs  mod.rs
(+406 files in other folders)
