[package]
name = "log-tapper"
version = "0.1.0"
description = "Android log file analyzer with AI-assisted analysis"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
# Tauri
tauri = { version = "2.10.0" }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Phase 1: File I/O and parsing
memmap2 = "0.9"
regex = "1.11"

# Phase 2: Scripting (Rhai)
# rhai = "1.21"

# Phase 4: Claude API (HTTP + async)
# tokio = { version = "1", features = ["full"] }
# reqwest = { version = "0.12", features = ["json", "stream"] }
