[package]
name = "log-tapper"
version = "0.1.0"
description = "Android log file analyzer with AI-assisted analysis"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Phase 1: File I/O and parsing
memmap2 = "0.9"
memchr = "2"
regex = "1.11"
tauri-plugin-dialog = "2.6.0"

# Phase 2: Scripting and YAML
rhai = { version = "1", features = ["sync"] }
serde_yaml = "0.9"

# Phase 4: Claude API (HTTP + async) + registry
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
rayon = "1"
aho-corasick = "1"
smallvec = "1"

# MCP bridge — local HTTP server for AI agent tool access
axum = "0.8"

# Versioning
semver = "1"

# Phase 2: Bookmarks + Analysis
uuid = { version = "1", features = ["v4"] }

# Window state persistence (saves position/size across restarts)
tauri-plugin-window-state = "2"
