[package]
name = "log-tapper"
version = "0.7.0"
description = "Android log file analyzer with AI-assisted analysis"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Phase 1: File I/O and parsing
memmap2 = "0.9"
memchr = "2"
regex = "1.11"
tauri-plugin-dialog = "2.6.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"

# Phase 2: Scripting and YAML
rhai = { version = "1", features = ["sync"] }
serde_yaml = "0.9"

# Phase 4: Claude API (HTTP + async) + registry
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
rayon = "1"
aho-corasick = "1"
smallvec = "1"

# MCP bridge — local HTTP server for AI agent tool access
axum = "0.8"

# Versioning
semver = "1"

# Phase 2: Bookmarks + Analysis
uuid = { version = "1", features = ["v4"] }

# Single instance enforcement (second launch redirects to existing window)
tauri-plugin-single-instance = "2"

# Window state persistence (saves position/size across restarts)
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = ["Win32_UI_Shell"] }

[lints.clippy]
# === Deny (safety-critical, zero tolerance) ===
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
perf = { level = "deny", priority = -1 }

# === Warn (code quality — prevent regressions) ===
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
unused_async = "warn"
wildcard_imports = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
macro_use_imports = "warn"
manual_string_new = "warn"
inefficient_to_string = "warn"

# === Warn (auto-fixable) ===
uninlined_format_args = "warn"
redundant_closure_for_method_calls = "warn"
redundant_clone = "warn"
explicit_iter_loop = "warn"
or_fun_call = "warn"
needless_collect = "warn"
semicolon_if_nothing_returned = "warn"

# === Warn (manual fixes — Phase 2) ===
manual_let_else = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
suboptimal_flops = "warn"
